Refactor and add repository
- big refactor
- add CatalogLink dto
- add CatalogLinkRepository
- create ProjectConstants file